src/styles/main.scss
@import "variables.scss";

html {
  scroll-behavior: smooth;
  overflow-x: hidden;
}

.overlay {
  background-color: hsla(229, 31%, 21%, 0.904);
  position: fixed;
  width: 100%;
  height: 100%;
  z-index: 1;
  transition: all 1s;
}

body {
  margin: 0;
  padding: 0;
  font-family: "Rubik", serif;
}

main {
  margin: 0;
  padding: 0;
}

.hero-section {
  margin: 4rem auto;
  width: 80%;
  display: flex;
  align-items: center;
  gap: 2rem;

  .hero-text-container {
    width: 50%;

    h1 {
      margin: 0;
      font-size: 3rem;
      font-weight: 500;
      color: $Very-Dark-Blue;

      @media (max-width: 820px) {
        font-size: 2rem;
      }
    }

    p {
      font-size: 1.15rem;
      line-height: 1.8rem;
      color: $Grayish-Blue;
    }

    .btn-container {
      margin-top: 1.8rem;
      display: flex;
      gap: 1rem;

      button {
        @include btn-default($Soft-Blue);
        padding: 0.8rem 1.4rem;
        letter-spacing: 0;
      }

      .chrome-btn:hover {
        background-color: transparent;
        color: $Soft-Blue;
      }

      .firefox-btn {
        background-color: $Light-Grayish-Blue;
        color: hsla(229, 31%, 21%, 0.781);
        border-color: transparent;
      }

      .firefox-btn:hover {
        border-color: hsla(229, 31%, 21%, 0.781);
        background-color: transparent;
      }
    }
  }

  .img-container {
    position: relative;

    .hero-img {
      width: 700px;
      margin-right: -100px;
    }

    .bg-img {
      position: absolute;
      width: 1000px;
      height: 72%;
      background-color: $Soft-Blue;
      border-bottom-left-radius: 12rem;
      z-index: -1;
      top: 30%;
      left: 34%;

      @media (max-width: 1240px) {
        left: 25%;
      }
    }
  }
}

.features-section {
  margin: 10rem auto;
  width: 80%;

  @media (max-width: 880px) {
    width: 90%;
  }

  .feature-header {
    text-align: center;

    h2 {
      font-size: 2.5rem;
      font-weight: 500;
      color: $Very-Dark-Blue;

      @media (max-width: 820px) {
        font-size: 2rem;
      }
    }

    p {
      font-size: 1.15rem;
      line-height: 1.8rem;
      color: $Grayish-Blue;
      max-width: 52%;
      margin: 0 auto;

      @media (max-width: 1240px) {
        max-width: 100%;
      }
    }

    nav {
      margin: 5rem auto;
      max-width: 68%;
      padding-bottom: 1rem;

      .feature-bottom-line {
        margin-top: 2rem;
        border-bottom: 1px solid rgb(221, 221, 221);
        display: flex;
        justify-content: start;

        @media (max-width: 1240px) {
          display: none;
        }

        .inner-border {
          width: 33%;
          border-top: 4px solid $Soft-Red;
        }

        .move-to-right {
          margin-left: 3.5rem;
        }
      }

      .start {
        justify-content: start;
      }

      .center {
        justify-content: center;
      }

      .end {
        justify-content: end;
      }

      ul {
        padding-right: 3rem;
        display: flex;
        align-items: center;
        justify-content: space-evenly;
        gap: 4.5rem;
        list-style: none;

        @media (max-width: 1240px) {
          flex-direction: column;
          justify-content: center;
          gap: 1.5rem;
          padding: 0;
        }

        li {
          span {
            font-size: 1.1rem;
            letter-spacing: 0.02rem;
            color: $Grayish-Blue;
          }

          span:hover {
            cursor: pointer;
            color: $Soft-Red;
          }
        }

        .feature-bottom-line-item {
          width: 100%;
          border-bottom: 1px solid rgb(221, 221, 221);
          display: flex;
          justify-content: center;
          display: none;

          @media (max-width: 1240px) {
            display: flex;
          }

          .inner-border-item {
            width: 50%;
            border-top: 4px solid $Soft-Red;
          }
        }
      }
    }
  }

  .feature-main {
    display: flex;
    align-items: center;
    gap: 10rem;

    @media (max-width: 1240px) {
      flex-direction: column;
      text-align: center;
    }

    .img-container {
      margin-left: 2rem;
      position: relative;

      .feature-img {
        width: 600px;
        margin-right: -100px;

        @media (max-width: 1240px) {
          margin: 0;
          max-width: 100%;
        }
      }

      .bg-img {
        position: absolute;
        width: 1000px;
        height: 100%;
        background-color: $Soft-Blue;
        border-bottom-right-radius: 12rem;
        z-index: -1;
        top: 26%;
        right: 12%;
      }
    }

    @keyframes fade {
      0% {
        opacity: 0;
        transform: scale(1.1);
      }
      100% {
        opacity: 1;
        transform: scale(1);
      }
    }

    .text-container {
      h2 {
        font-size: 2rem;
        font-weight: 500;
        color: $Very-Dark-Blue;
      }

      p {
        font-size: 1.15rem;
        line-height: 1.8rem;
        color: $Grayish-Blue;
        max-width: 95%;
      }

      .info-btn {
        @include btn-default($Soft-Blue);
        margin-top: 1rem;
        padding: 0.8rem 1.4rem;
        letter-spacing: 0.02rem;
      }

      .info-btn:hover {
        background-color: transparent;
        color: $Soft-Blue;
      }
    }
  }

  .animation-fade {
    animation: fade 1s;
  }
}
/* ... */

